# Cowrite

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 8add7dc085ba_initial_db_migration.py
app/: deps.py  limiter.py  main.py  util.py
app/api/models/: __init__.py  document.py  documents.py  email.py  user.py
app/api/repo/: base.py  document.py  document_member.py  email.py  otp.py  redis.py  uow.py  user.py
app/api/routers/: auth.py  document.py  router.py  websocket.py
app/api/schemas/: auth.py  document.py  event.py  notifications.py  response.py  user.py  websocket.py
app/api/services/: auth.py  connection_registry.py  document.py  email.py  event.py  transformation.py  user.py  websocket.py
app/core/: config.py  exception_handlers.py  exceptions.py  security.py
app/worker/: __init__.py  celery_app.py  celeryconfig.py  db.py  services.py
app/worker/tasks/: base.py  email.py  event.py
test/: conftest.py  test_1_websocket.py  test_auth.py  test_connection_registry.py  test_document.py  test_event_bus.py  test_websocket.py
